--- a/.gitignore
+++ b/.gitignore
@@ -25,13 +25,14 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
-
+*.json
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
-
+*.DS_Store
+*.zip
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
