--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [DATA]
 dataset=fewrel
-train_path=./data/fewrel/10way5shot/
+train_path=/Users/sefika/thesis/neurogenesis-cre/data/fewrel/fewrel
 [MODEL]
 embedding_model=google-bert/bert-large-uncased
 [OPTIMIZER]
