refactor and fixes

--- a/config.ini
+++ b/config.ini
@@ -1,12 +1,18 @@
 [DATA]
-dataset=fewrel
-train_path=/Users/sefika/thesis/neurogenesis-cre/data/fewrel/fewrel
+dataset=tacred
+train_path=final/
+test_path=final/
 [MODEL]
-embedding_model=google-bert/bert-large-uncased
-[OPTIMIZER]
+embedding_model=microsoft/deberta-v3-large
 lr=1e-5
 [TRAINING]
 num_epochs=10
 batch_size=4
 [TEST]
 test_path=./data/fewrel/test-10way5shot/
+[HYPERPARAMETERS]
+epochs=10
+batch_size=4
+lr=1e-5
+alpha=0.5
+dropout=0.1
