--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [DATA]
 dataset=tacred
-train_path=final/
-test_path=final/
+train_path=/Users/sefika/thesis/neurogenesis-cre/data/fewrel/10way5shot_data_fewrel/10way5shot_fewrel/run1/task1
+test_path=/Users/sefika/thesis/neurogenesis-cre/data/fewrel/10way5shot_data_fewrel/test/run1/task1
 [MODEL]
 embedding_model=microsoft/deberta-v3-large
 lr=1e-5
